# comic-hub

./: .editorconfig  .env.example  .gitattributes  .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json
.demo/: gen-library.ps1  make-gif.ps1
.github/workflows/: ci.yml
apps/client/: index.html  package.json  tsconfig.json  vite.config.ts
apps/client/src/: App.tsx  connection.ts  main.tsx  router.tsx  styles.css
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/capabilities/: default.json
apps/client/src-tauri/src/: commands.rs  discovery.rs  lib.rs  main.rs  server.rs
apps/reader/: dev-fixture-server.mjs  index.html  package.json  vite.config.ts
apps/reader/src/: App.tsx  styles.css
apps/reader/src-tauri/: Cargo.toml  tauri.conf.json
apps/reader/src-tauri/capabilities/: default.json
apps/reader/src-tauri/src/: formats.rs  formats_gen.rs  lib.rs  local.rs  main.rs
deploy/: comichub-server.service  docker-compose.yml  install-windows-service.ps1
docs/: 00-overview.md  01-architecture.md  02-data-model.md  03-api.md  04-server.md  05-client.md  06-reader.md  07-design-system.md  08-roadmap.md  09-tech-decisions.md  10-deployment.md  design-handoff-discovery.md  design-handoff-phase3-auth.md  design-handoff-presence.md  design-handoff-rescan-stale-lists.md  design-handoff-select-popup.md  design-handoff-tracker.md  phase-1-plan.md  phase-2-plan.md  phase-3-plan.md
server/: .dockerignore  Dockerfile  README.md  go.mod  go.sum
server/cmd/comichub-server/: main.go
server/internal/access/: access.go  access_test.go
server/internal/archive/: archive.go  cb7.go  cb7_test.go  cbr.go  cbr_test.go  cbt.go  cbt_test.go  cbz.go  cbz_test.go  cbz_write.go  cbz_write_test.go  format.go  registry.go  (+1 more)
tools/: prepare-sidecar.mjs
tools/codegen/: README.md  formats.json  gen-formats.mjs
(+295 files in other folders)
