[package]
name = "comichub-reader"
version = "0.0.0"
description = "ComicHub reader"
authors = ["ComicHub"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "comichub_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
