[package]
name = "comichub-reader"
version = "0.0.0"
description = "ComicHub reader"
authors = ["ComicHub"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "comichub_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = [
  "jpeg",
  "png",
  "gif",
  "bmp",
  "webp",
] }
